--- a/src/components/ui/Modal/modalSlots.scss
+++ b/src/components/ui/Modal/modalSlots.scss
@@ -1,18 +1,20 @@
 .Layer__ModalContextBar {
   display: grid;
 
-  grid-template-columns: minmax(0, 2rem) 1fr minmax(0, 2rem);
+  grid-template-columns: auto 1fr auto;
   column-gap: var(--spacing-md);
-  grid-template-areas: 'back logo close';
+  grid-template-areas: "back logo close";
   align-items: center;
 
-  > [slot=back] {
+  > [slot="back"] {
     grid-area: back;
   }
-  > [slot=logo] {
+
+  > [slot="logo"] {
     grid-area: logo;
   }
-  > [slot=close] {
+
+  > [slot="close"] {
     grid-area: close;
   }
 }
@@ -22,7 +24,7 @@
   block-size: 100%;
   overflow-y: auto;
 
-  > [slot=center] {
+  > [slot="center"] {
     align-self: center;
     justify-self: center;
   }
